--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "nuxt-app",
   "private": true,
   "type": "module",
+  
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev --host",
@@ -10,17 +11,15 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "@nuxt/devtools": "latest",
-    "autoprefixer": "^10.4.16",
-    "nuxt": "^3.7.4",
-    "nuxt-icon": "^0.5.0",
-    "postcss": "^8.4.31",
-    "tailwindcss": "^3.3.3",
-    "vue": "^3.3.4",
-    "vue-router": "^4.2.5"
+    "@nuxt/content": "^2.9.0",
+    "nuxt": "^3.7.4"
   },
   "dependencies": {
-    "sass": "^1.69.2",
-    "swiper": "^10.3.1"
+    "@nuxtjs/tailwindcss": "^6.10.1",
+    "@vueuse/core": "^10.6.1",
+    "@vueuse/nuxt": "^10.6.1",
+    "nuxt-icon": "^0.6.6",
+    "nuxt-swiper": "^1.2.2",
+    "sass": "^1.69.2"
   }
 }
