--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "devDependencies": {
     "@nuxt/content": "^2.9.0",
-    "nuxt": "^3.7.4"
+    "nuxt": "^3.7.4",
+    "nuxt-lodash": "^2.5.3"
   },
   "dependencies": {
     "@nuxtjs/tailwindcss": "^6.10.1",
